--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@
   #index.css
 \*-----------------------------------*/
 
-/**
- * copyright 2022 codewithsadee
+/*
+ * @copyright 2023 Linda Paz
  */
 
 
